<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mvvm_login">mvvm登陆</string>
    <string name="mvvm_oe">配件信息采集</string>
    <string name="export">导出数据</string>
    <string name="scan">扫码</string>
    <string name="today_num">今日共%d条数据</string>
    <string name="long_flg">长：</string>
    <string name="width_flg">宽：</string>
    <string name="high_flg">高：</string>
    <string name="weight_flg">重：</string>
    <string name="is_useful_char">!#$%\'\"()*+,-./0123456789:;=?~@ABCDEFGHIJKLMNOPQRSTUVWXYZ[]^_、abcdefghijklmnopqrstuvwxyz{|}&amp;&lt;&gt;&quot;</string>
    <string name="enter_account">请输入账户</string>
    <string name="oe">OE/AE</string>
    <string name="enter_login_pass">请输入密码</string>
    <string name="login_now">登陆</string>
    <string name="nav_forget_login_pass">忘记登陆密码</string>
    <string name="save">保存</string>
    <string name="clear">清空</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
</resources>