<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/return_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:scaleType="centerInside"
        android:src="@drawable/btn_backwards_black"
        android:elevation="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@color/bg_common_white"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/mvvm_oe"
        app:layout_constraintLeft_toLeftOf="@+id/return_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_blue_pressed"
        android:textColor="@color/st_bg_common_normal"
        android:padding="6dp"
        android:textSize="18sp"
        android:text="@string/export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#e0e0e0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/oe"
        style="@style/login_register_edit"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="155dp"
        android:layout_marginTop="30dp"
        android:hint="@string/oe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/btn_blue_pressed"
        android:layout_marginTop="25dp"
        android:layout_marginStart="@dimen/dp_10"
        android:textColor="@color/st_portfolio_switch_down_color"
        android:padding="6dp"
        android:textSize="18sp"
        android:text="@string/scan"
        app:layout_constraintStart_toEndOf="@+id/oe"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/long_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="40dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/long_flg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oe" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/long_edt"
        style="@style/or_params_edit"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/long_flag"
        app:layout_constraintTop_toBottomOf="@+id/oe" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/long_unit_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="40dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/cm"
        app:layout_constraintStart_toEndOf="@+id/long_edt"
        app:layout_constraintTop_toBottomOf="@+id/oe" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/width_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/width_flg"
        app:layout_constraintStart_toEndOf="@+id/long_unit_flag"
        app:layout_constraintTop_toBottomOf="@+id/oe" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/width_edt"
        style="@style/or_params_edit"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/width_flag"
        app:layout_constraintTop_toBottomOf="@+id/oe" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/unit_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="40dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/cm"
        app:layout_constraintStart_toEndOf="@+id/width_edt"
        app:layout_constraintTop_toBottomOf="@+id/oe" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/high_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="20dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/high_flg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_flag" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/high_edt"
        style="@style/or_params_edit"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/high_flag"
        app:layout_constraintTop_toBottomOf="@+id/unit_flag" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/high_unit_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="20dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/cm"
        app:layout_constraintStart_toEndOf="@+id/high_edt"
        app:layout_constraintTop_toBottomOf="@+id/unit_flag" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight_flg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/weight_flg"
        app:layout_constraintStart_toEndOf="@+id/long_unit_flag"
        app:layout_constraintTop_toBottomOf="@+id/unit_flag" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weight_edt"
        style="@style/or_params_edit"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/weight_flg"
        app:layout_constraintTop_toBottomOf="@+id/unit_flag" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight_unit_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="20dp"
        android:textColor="@color/st_bg_common_normal"
        android:textSize="18sp"
        android:text="@string/kg"
        app:layout_constraintStart_toEndOf="@+id/weight_edt"
        app:layout_constraintTop_toBottomOf="@+id/unit_flag" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/clear"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_blue_pressed"
        android:gravity="center"
        android:text="@string/clear"
        android:layout_marginVertical="45dp"
        android:layout_marginStart="@dimen/dp_72"
        android:textColor="@drawable/text_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/save"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_blue_pressed"
        android:gravity="center"
        android:text="@string/save"
        android:layout_marginVertical="45dp"
        android:layout_marginEnd="@dimen/dp_72"
        android:textColor="@drawable/text_blue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>